css/main.css
@import url('//fonts.googleapis.com/css?fa:homily=Lato:300,400,900');

html,
body {
    height: 100%;
    width:100%;
    font-family: "Lato","Helvetica Neue",Arial,sans-serif;
}
h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, p, .navbar, a, .td-name, td, li {
  
  font-family: "Lato","Helvetica Neue",Arial,sans-serif;
}
h1{
  font-weight:600;
  font-size: 50px;
}
.slabtexted .slabtext {
  display: -moz-inline-box;
  display: inline-block;
  white-space: nowrap;
}
.slabtextinactive .slabtext {
  display: inline;
  white-space: normal;
  font-size: 1em !important;
  letter-spacing: inherit !important;
  word-spacing: inherit !important;
  *letter-spacing: 0 !important;
  *word-spacing: 0 !important;
}
.slabtextdone .slabtext {
  display: block;
}
body {
  padding-bottom: 50px ;
}
body {
  font-weight: 300 ;
}
b,
strong {
  font-weight: 400 ;
}
a {
  color: inherit ;
}
.text-thin {
  font-family: "Lato", Helvetica, Arial, sans-serif;
  font-weight: 300 ;
}
p {
  font-size: 18px ;
  color: #444;
}
.cta {
  display: inline-block;
  overflow: hidden ;
  transition: all 400ms ease;
  border: 1px solid rgba(70, 51, 110, 0.3);
  color: #46336e;
  font-size: 110% ;
  font-weight: 400 ;
  margin: 5px auto ;
  border-radius: 20px ;
}
.cta .icon {
  padding-top: 10px ;
}
.cta:hover {
  border-color: rgba(236, 41, 57, 0.3);
  color: #ec2939;
}
.cta > * {
  display: block ;
  padding: 12px 25px ;
  text-align: center ;
}
.cta > small {
  padding-top: 0 ;
  margin-top: -15px;
  font-family: "Lato", Helvetica, Arial, sans-serif;
  font-weight: 300 ;
}
.cta .cta-header {
  background-color: #6f3060;
  color: white ;
}
.cta .cta-foot {
  padding-top: 0 ;
  text-decoration: none ;
  border-bottom-style: none ;
}
.cta .cta-foot .glyphicon {
  font-size: 70% ;
}
.cta .cta-foot:hover {
  color: #ec2939;
}
.cta .cta-body .big {
  font-weight: 600 ;
  text-align: justify ;
}
.btn-cta {
  margin: 5px auto ;
  padding: 15px 25px ;
  font-family: "Lato", Helvetica, Arial, sans-serif;
  font-weight: 300 ;
  text-transform: uppercase ;
  white-space: normal ;
}
.btn-cta small {
  font-size: 70% ;
}
@media (max-width: 480px) {
  .btn-cta {
    display: block;
    width: 100%;
  }
}
.container{
  max-width: 992px;
  padding: 0 40px ;
}
.containerpost{
  max-width: 850px;
  padding: 0 40px ;
}
.containerpost img:not(.avatar){
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-width: 100%;
  height: auto;
}
.container-blog {
  margin-right: auto;
  margin-left: auto;
  padding-left: 15px;
  padding-right: 15px;
}
@media (min-width: 768px) {
  .container-blog {
    width: 750px;
  }
}
@media (min-width: 992px) {
  .container-blog {
    width: 970px;
  }
}
@media (min-width: 1200px) {
  .container-blog {
    width: 1170px;
  }
}
@media (min-width: 992px) {
  .vertical-align {
    display: flex;
    align-items: center;
  }
}

header:not(#myCarousel) {
  background: url("../img/bg2.png") center no-repeat;
  background-size: cover ;
  filter: grayscale(30%);
}
.header-alt{
  min-height: 400px ;
  background: #efefef;
  background-size: cover ;
}
.header-blog{
  min-height: 400px;
}
.header-blog h1{
  margin-top: -20px;
  color:white;
  font-size: 60px;
}
@media (min-width: 768px) {
  header:not(.header-blog) {
    min-height: 700px ;
  }
}
@media (max-width: 768px) {
  .header-alt {
    min-height: 100px;
    height: auto ;
  }
}
.section-bg{
  background: url('../img/bg-fr.jpg') center center no-repeat transparent;
  padding-top: 25px;
  padding-bottom: 25px;
}
.section-bg img {
padding:10px;
  }
@media (min-width: 768px) {
.section-bg img {
max-height: 300px;
  }
}
  .section-bg h2 small {
color: #fafafa;
font-size: 55%;
  }
.posts{
  max-width: 992px;
  border-radius: 3px ;
  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.4);
  background-color: white ;
  color: #6f3060;
  margin: 20px auto 30px ;
  height: 150px;
  white-space: normal;
}

.punch-line {
  max-width: 992px;
  border-radius: 3px ;
  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.4);
  background-color: white ;
  color: #6f3060;
  padding:20px;
  margin: 20px auto 30px ;
  font-size: 34px;
  text-align: center ;
}

.punch-line b {
  font-weight: 200;
  color: #ec2939;
}
section {
  margin: 50px auto ;
}
section h1 {
  margin-bottom: 35px ;
}
section h3 {
  margin-bottom: 25px ;
}
section .feature-box {
  text-align: center ;
  padding-bottom: 25px ;
}
section .feature-box .big-icon {
  display: block ;
  color: #46336e;
  margin: 15px auto ;
}
section .feature-box.feature-img {
  padding: 50px ;
}
section .member .member {
  display: inline-block;
  width: 150px ;
  margin: 0 auto ;
}
.member a{
  border-bottom: 0px;
}
section .member .avatar {
  width: 80px;
  height: 80px;
  margin: 15px ;
}
section .member .name {
  font-weight: 400 ;
}
section .member .title {
  font-size: 80% ;
}
section .contact-link {
  margin: 30px auto ;
}
section .contact-link li {
  margin: 15px ;
  width: 200px ;
}
section .contact-link .fa {
  margin: 25px ;
}
section .contact-link li:nth-child(1) .fa {
  color: #46336e;
}
section .contact-link li:nth-child(2) .fa {
  color: #6f3060;
}
section .contact-link li:nth-child(3) .fa {
  color: #9a2d53;
}
section .contact-link li:nth-child(4) .fa {
  color: #c32c46;
}
section .contact-link li:nth-child(5) .fa {
  color: #ec2939;
}
section.featured-content {
  background-color: #F6F6F6 ;
  color: rgba(0, 0, 0, 0.8);
  padding-top:10px;
  padding-bottom:10px;
}
section.featured-content .big-icon {
  color: rgba(0, 0, 0, 0.7);
}
section.container.video {
  max-width: 768px;
}

@media (max-width: 767px) {
  h1 {
    font-size: 35px;
  }
}
@media (max-width: 500px) {
.punch-line {
    font-size: 19px;
  }
}
.punchline {
  font-size: 32px;
  color:white;
  margin: 60px auto 100px ;
}
@media (max-width: 768px) {
.punchline {
  font-size: 22px;
  }
}
h2 small {
  font-size: 55%;
}
.avatar{
  max-width: 80px;
  margin:10px;
}
.name {
  font-weight: 400;
}
@media (max-width: 768px) {
  h2 {
    font-size: 32px;
  }
}
/* ... */

